add project files

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -57,6 +57,8 @@
         <span class="text-secondary small">
           {{ me.username or me.login }} ({{ me.role }})
         </span>
+        <a class="btn btn-outline-dark btn-sm btn-round" href="/secure/inbox">Защищенные</a>
+
         <a class="btn btn-outline-dark btn-sm btn-round" href="/logout">Выйти</a>
       </div>
     </div>
